Fix image sizing and spacing

--- a/src/components/Register/styles.scss
+++ b/src/components/Register/styles.scss
@@ -5,12 +5,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-}
-
-#background {
-    height: 1000px;
-    width: 100%;
     background-image: url('../../assets/images/league-bg');
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
+    height: 80vh;
 }
 
 #register-area {
